force-app/main/default/objects/CaseParticipant__c/CaseParticipant__c.object-meta.xml
<CustomObject>
    <description>Represents a user involved in a Case and defines their level of interaction. Record changes in this object trigger the dynamic sharing engine to calculate and grant the appropriate Case access based on the participant&apos;s role.</description>
    <label>Case Participant</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>