force-app/main/default/objects/CaseParticipant__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>The Case associated with this participant. The sharing engine uses this reference to create or update the appropriate sharing records (CaseShare) for the target Case</description>
    <inlineHelpText>The Case associated with this participant. The sharing engine uses this reference to create or update the appropriate sharing records (CaseShare) for the target Case</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Participants</relationshipLabel>
    <relationshipName>CaseParticipants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>