force-app/main/default/objects/CaseParticipant__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <defaultValue>&apos;Viewer&apos;</defaultValue>
    <description>Defines the participant&apos;s responsibility and access level for the related Case (e.g., Manager, Editor, Viewer). This value is evaluated by the sharing engine to determine if the user receives Read or Read/Write access</description>
    <inlineHelpText>Defines the participant&apos;s responsibility and access level for the related Case (e.g., Manager, Editor, Viewer). This value is evaluated by the sharing engine to determine if the user receives Read or Read/Write access</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Viewer</fullName>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>