force-app/main/default/objects/CaseParticipant__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The internal Salesforce User acting as a participant. The sharing engine uses this field to identify which user will receive access to the related Case.</description>
    <inlineHelpText>The internal Salesforce User acting as a participant. The sharing engine uses this field to identify which user will receive access to the related Case.</inlineHelpText>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CaseParticipants</relationshipName>
    <type>Lookup</type>
</CustomField>